# Information-security

./: .gitignore  CMakeLists.txt
include/cipher/: cipher.hpp
include/cryptographic/: cryptographic.hpp
include/mentalPoker/: mentalPoker.hpp
include/signature/: signature.hpp
include/votingSystem/: votingSystem.hpp
src/: CMakeLists.txt  ex  input.txt  lib.hpp  main.cpp  main.go  test.cpp
src/cipher/: CMakeLists.txt  cipher.cpp
src/cryptographic/: CMakeLists.txt  cryptographic.cpp
src/main/: CMakeLists.txt  main.cpp
src/mentalPoker/: CMakeLists.txt  mentalPoker.cpp
src/signature/: CMakeLists.txt  signature.cpp
src/votingSystem/: CMakeLists.txt  votingSystem.cpp
